fix: concurrency and optimization

--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 87,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -700,10 +700,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (21), status: running_answers\n",
-      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (22), status: running_answers\n",
-      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (23), status: running_answers\n",
-      "Created experiment: MFS_questions_mfs-rag-baseline_3_v0 (24), status: running_answers\n"
+      "Created experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (93), status: running_answers\n",
+      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (94), status: running_answers\n",
+      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (95), status: running_answers\n",
+      "Created experiment: MFS_questions_mfs-rag-baseline_3_v0 (96), status: running_answers\n"
      ]
     }
    ],
@@ -747,28 +747,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f40ad66f-2920-47d2-9cac-1edc51c863b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (6), status: running_metrics\n",
-      "Updated experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (7), status: running_metrics\n",
-      "Updated experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (8), status: running_metrics\n",
-      "Updated experiment: MFS_questions_mfs-baseline_3_v0 (9), status: running_metrics\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add a metric to an existing experiment(s)\n",
     "# - If you want to update one or many metriccs without relaucnhing the answer generation\n",
     "# --\n",
+    "return\n",
     "for exp_id in experiment_ids:\n",
     "    experiment = {\n",
-    "    \"metrics\": [\"answer_relevancy\"],\n",
+    "    #\"metrics\": [\"answer_relevancy\"],\n",
+    "    \"metrics\": [\"output_length\", \"judge_exactness\", \"judge_completude\", \"judge_notator\", \"bias\", \"toxicity\", \"answer_relevancy\"],\n",
     "    \"skip_answers_generation\": True,\n",
     "    }\n",
     "    response = requests.patch(f'{API_URL}/v1/experiment/{exp_id}', json=experiment)\n",
@@ -789,28 +780,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:206: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
-      "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
-      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:163: RuntimeWarning: invalid value encountered in divide\n",
-      "  arrmean = um.true_divide(arrmean, div, out=arrmean,\n",
-      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:198: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      "/tmp/ipykernel_3988470/2964690404.py:26: RuntimeWarning: Mean of empty slice.\n",
-      "  f\"{arr.mean():.2f} ± {arr.std():.2f}\",  # Formatting as 'mean±std'\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -839,53 +812,48 @@
        "      <th>judge_notator</th>\n",
        "      <th>output_length</th>\n",
        "      <th>toxicity</th>\n",
-       "      <th>support</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>AgentPublic/llama3-instruct-8b</th>\n",
-       "      <td>0.93 ± 0.14</td>\n",
+       "      <td>0.90 ± 0.21</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>27.82 ± 21.74</td>\n",
+       "      <td>26.28 ± 20.62</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>3.13 ± 1.96</td>\n",
-       "      <td>301.97 ± 92.85</td>\n",
+       "      <td>3.51 ± 2.02</td>\n",
+       "      <td>312.46 ± 105.11</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
-       "      <td>0.92 ± 0.19</td>\n",
+       "      <td>0.93 ± 0.15</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>26.41 ± 16.87</td>\n",
+       "      <td>28.46 ± 19.58</td>\n",
+       "      <td>0.03 ± 0.16</td>\n",
+       "      <td>4.03 ± 1.97</td>\n",
+       "      <td>297.38 ± 98.77</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>3.54 ± 1.78</td>\n",
-       "      <td>296.67 ± 97.40</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
-       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>meta-llama/Meta-Llama-3.1-70B-Instruct</th>\n",
-       "      <td>0.99 ± 0.02</td>\n",
+       "      <td>0.95 ± 0.19</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>35.64 ± 23.70</td>\n",
+       "      <td>35.90 ± 26.06</td>\n",
        "      <td>0.05 ± 0.22</td>\n",
-       "      <td>4.79 ± 2.30</td>\n",
-       "      <td>239.13 ± 91.20</td>\n",
+       "      <td>4.85 ± 2.50</td>\n",
+       "      <td>255.74 ± 103.22</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mfs-rag-baseline</th>\n",
-       "      <td>nan ± nan</td>\n",
+       "      <td>0.90 ± 0.16</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>40.92 ± 26.43</td>\n",
-       "      <td>0.13 ± 0.33</td>\n",
-       "      <td>5.41 ± 2.51</td>\n",
-       "      <td>129.18 ± 66.80</td>\n",
-       "      <td>nan ± nan</td>\n",
-       "      <td>8</td>\n",
+       "      <td>44.87 ± 26.69</td>\n",
+       "      <td>0.10 ± 0.30</td>\n",
+       "      <td>5.64 ± 2.64</td>\n",
+       "      <td>134.18 ± 82.97</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -893,31 +861,31 @@
       ],
       "text/plain": [
        "                                       answer_relevancy         bias  \\\n",
-       "AgentPublic/llama3-instruct-8b              0.93 ± 0.14  0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.92 ± 0.19  0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.99 ± 0.02  0.00 ± 0.00   \n",
-       "mfs-rag-baseline                              nan ± nan  0.00 ± 0.00   \n",
+       "AgentPublic/llama3-instruct-8b              0.90 ± 0.21  0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.93 ± 0.15  0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.95 ± 0.19  0.00 ± 0.00   \n",
+       "mfs-rag-baseline                            0.90 ± 0.16  0.00 ± 0.00   \n",
        "\n",
        "                                       judge_completude judge_exactness  \\\n",
-       "AgentPublic/llama3-instruct-8b            27.82 ± 21.74     0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct     26.41 ± 16.87     0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct    35.64 ± 23.70     0.05 ± 0.22   \n",
-       "mfs-rag-baseline                          40.92 ± 26.43     0.13 ± 0.33   \n",
+       "AgentPublic/llama3-instruct-8b            26.28 ± 20.62     0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct     28.46 ± 19.58     0.03 ± 0.16   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct    35.90 ± 26.06     0.05 ± 0.22   \n",
+       "mfs-rag-baseline                          44.87 ± 26.69     0.10 ± 0.30   \n",
        "\n",
-       "                                       judge_notator   output_length  \\\n",
-       "AgentPublic/llama3-instruct-8b           3.13 ± 1.96  301.97 ± 92.85   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct    3.54 ± 1.78  296.67 ± 97.40   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct   4.79 ± 2.30  239.13 ± 91.20   \n",
-       "mfs-rag-baseline                         5.41 ± 2.51  129.18 ± 66.80   \n",
+       "                                       judge_notator    output_length  \\\n",
+       "AgentPublic/llama3-instruct-8b           3.51 ± 2.02  312.46 ± 105.11   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct    4.03 ± 1.97   297.38 ± 98.77   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct   4.85 ± 2.50  255.74 ± 103.22   \n",
+       "mfs-rag-baseline                         5.64 ± 2.64   134.18 ± 82.97   \n",
        "\n",
-       "                                           toxicity  support  \n",
-       "AgentPublic/llama3-instruct-8b          0.00 ± 0.00       39  \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct   0.00 ± 0.00       39  \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct  0.00 ± 0.00       38  \n",
-       "mfs-rag-baseline                          nan ± nan        8  "
+       "                                           toxicity  \n",
+       "AgentPublic/llama3-instruct-8b          0.00 ± 0.00  \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct   0.00 ± 0.00  \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct  0.00 ± 0.00  \n",
+       "mfs-rag-baseline                        0.00 ± 0.00  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,8 +893,8 @@
    "source": [
     "# Read results\n",
     "# --\n",
-    "df_all = []\n",
-    "supports = []\n",
+    "df_all = [] # list of \n",
+    "supports = [] # if some answer/observation failed, the support can be less than the dataset size\n",
     "# @TODO: make it simple !\n",
     "for model, exp_id in zip(models_to_test, experiment_ids):\n",
     "    # Get an experiment result\n",
@@ -941,6 +909,8 @@
     "    # --\n",
     "    # build frontend measure from the observation_table (mean stc etc)\n",
     "    df_metrics = {}\n",
+    "    metric_support = []\n",
+    "    supports.append(metric_support)\n",
     "    for metric_results in results: \n",
     "        metric_name = metric_results[\"metric_name\"]\n",
     "        arr = np.array([x[\"score\"] for x in metric_results[\"observation_table\"] if (isinstance(x[\"score\"], (int, float)))])\n",
@@ -952,7 +922,7 @@
     "                len(arr), # support\n",
     "            ]], columns=[\"mean\", \"std\", \"median\", \"mean_std\", \"support\"])\n",
     "        df_metrics[metric_name] = df\n",
-    "    \n",
+    "        metric_support.append(len(arr))\n",
     "    \n",
     "    # Stack the mean_std final measure\n",
     "    # --\n",
@@ -961,12 +931,8 @@
     "    df = pd.DataFrame({metric_name:df[\"mean_std\"].iloc[0] for metric_name, df in sorted(df_metrics.items())}, index=[name])\n",
     "    df_all.append(df)\n",
     "\n",
-    "    supports.append(len(arr))\n",
     "final_df = pd.concat(df_all)\n",
-    "\n",
-    "# Add the support for each metrics\n",
-    "# if some answer/observation failed, the support can be less than the dataset size\n",
-    "final_df[\"support\"] = supports\n",
+    "#final_df[\"support\"] = supports # for debugging\n",
     "final_df"
    ]
   },
