--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -767,7 +767,7 @@
     "    if \"id\" in resp:\n",
     "        print(f'Updated experiment: {resp[\"name\"]} ({resp[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
     "    else:\n",
-    "        print(resp)\n"
+    "        print(resp)"
    ]
   },
   {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
@@ -817,42 +817,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>AgentPublic/llama3-instruct-8b</th>\n",
-       "      <td>0.90 ± 0.21</td>\n",
+       "      <td>0.86 ± 0.24</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>26.28 ± 20.62</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
-       "      <td>3.51 ± 2.02</td>\n",
-       "      <td>312.46 ± 105.11</td>\n",
+       "      <td>29.62 ± 21.44</td>\n",
+       "      <td>0.03 ± 0.16</td>\n",
+       "      <td>3.69 ± 1.99</td>\n",
+       "      <td>308.44 ± 97.30</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
-       "      <td>0.93 ± 0.15</td>\n",
+       "      <td>0.94 ± 0.11</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>28.46 ± 19.58</td>\n",
-       "      <td>0.03 ± 0.16</td>\n",
-       "      <td>4.03 ± 1.97</td>\n",
-       "      <td>297.38 ± 98.77</td>\n",
+       "      <td>29.49 ± 19.21</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
+       "      <td>3.51 ± 2.01</td>\n",
+       "      <td>303.51 ± 107.09</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>meta-llama/Meta-Llama-3.1-70B-Instruct</th>\n",
-       "      <td>0.95 ± 0.19</td>\n",
+       "      <td>0.92 ± 0.21</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>35.90 ± 26.06</td>\n",
+       "      <td>35.51 ± 23.14</td>\n",
        "      <td>0.05 ± 0.22</td>\n",
-       "      <td>4.85 ± 2.50</td>\n",
-       "      <td>255.74 ± 103.22</td>\n",
+       "      <td>4.72 ± 2.53</td>\n",
+       "      <td>254.03 ± 104.30</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mfs-rag-baseline</th>\n",
-       "      <td>0.90 ± 0.16</td>\n",
+       "      <td>0.88 ± 0.18</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>44.87 ± 26.69</td>\n",
-       "      <td>0.10 ± 0.30</td>\n",
-       "      <td>5.64 ± 2.64</td>\n",
-       "      <td>134.18 ± 82.97</td>\n",
+       "      <td>43.92 ± 28.44</td>\n",
+       "      <td>0.18 ± 0.38</td>\n",
+       "      <td>5.51 ± 2.60</td>\n",
+       "      <td>117.18 ± 59.10</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -861,22 +861,22 @@
       ],
       "text/plain": [
        "                                       answer_relevancy         bias  \\\n",
-       "AgentPublic/llama3-instruct-8b              0.90 ± 0.21  0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.93 ± 0.15  0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.95 ± 0.19  0.00 ± 0.00   \n",
-       "mfs-rag-baseline                            0.90 ± 0.16  0.00 ± 0.00   \n",
+       "AgentPublic/llama3-instruct-8b              0.86 ± 0.24  0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.94 ± 0.11  0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.92 ± 0.21  0.00 ± 0.00   \n",
+       "mfs-rag-baseline                            0.88 ± 0.18  0.00 ± 0.00   \n",
        "\n",
        "                                       judge_completude judge_exactness  \\\n",
-       "AgentPublic/llama3-instruct-8b            26.28 ± 20.62     0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct     28.46 ± 19.58     0.03 ± 0.16   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct    35.90 ± 26.06     0.05 ± 0.22   \n",
-       "mfs-rag-baseline                          44.87 ± 26.69     0.10 ± 0.30   \n",
+       "AgentPublic/llama3-instruct-8b            29.62 ± 21.44     0.03 ± 0.16   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct     29.49 ± 19.21     0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct    35.51 ± 23.14     0.05 ± 0.22   \n",
+       "mfs-rag-baseline                          43.92 ± 28.44     0.18 ± 0.38   \n",
        "\n",
        "                                       judge_notator    output_length  \\\n",
-       "AgentPublic/llama3-instruct-8b           3.51 ± 2.02  312.46 ± 105.11   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct    4.03 ± 1.97   297.38 ± 98.77   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct   4.85 ± 2.50  255.74 ± 103.22   \n",
-       "mfs-rag-baseline                         5.64 ± 2.64   134.18 ± 82.97   \n",
+       "AgentPublic/llama3-instruct-8b           3.69 ± 1.99   308.44 ± 97.30   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct    3.51 ± 2.01  303.51 ± 107.09   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct   4.72 ± 2.53  254.03 ± 104.30   \n",
+       "mfs-rag-baseline                         5.51 ± 2.60   117.18 ± 59.10   \n",
        "\n",
        "                                           toxicity  \n",
        "AgentPublic/llama3-instruct-8b          0.00 ± 0.00  \n",
@@ -885,7 +885,7 @@
        "mfs-rag-baseline                        0.00 ± 0.00  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,22 +946,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 102,
    "id": "6c3b601d-8340-49cc-aec5-fff803fb946c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 866,\n",
-       " 'created_at': '2024-11-06T17:32:05.706684',\n",
-       " 'score': 70.0,\n",
-       " 'observation': '70',\n",
-       " 'num_line': 9,\n",
-       " 'error_msg': None}"
+       "{'id': 7087,\n",
+       " 'created_at': '2024-11-09T01:37:35.215941',\n",
+       " 'score': 1.0,\n",
+       " 'observation': 'The score is 1.00 because the response perfectly addressed the question without any irrelevant information. Well done!',\n",
+       " 'num_line': 10,\n",
+       " 'error_msg': None,\n",
+       " 'execution_time': 5}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,10 +970,11 @@
    "source": [
     "# See what's inside an experiment result\n",
     "# --\n",
+    "metric_index = 4\n",
     "len(results) # number of metrics\n",
-    "list(results[0]) # the keys of the dict representing the result object\n",
-    "len(results[0][\"observation_table\"]) # number of observation -> one per dataset line.\n",
-    "results[0][\"observation_table\"][0] # the actual \"observation\" for one metric, for one line in the dataset."
+    "list(results[metric_index]) # the keys of the dict representing the result object\n",
+    "len(results[metric_index][\"observation_table\"]) # number of observation -> one per dataset line.\n",
+    "results[metric_index][\"observation_table\"][0] # the actual \"observation\" for one metric, for one line in the dataset."
    ]
   }
  ],
