feat: add generation time metric + fix experiment patch

--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 105,
    "id": "f466a3ee-9b1a-4115-8d71-94297d3ced2e",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
        "38          Assurance retraite               Retraite  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 106,
    "id": "450399aa-f836-47b7-b6f6-2541da8a9f27",
    "metadata": {},
    "outputs": [
@@ -554,14 +554,14 @@
      "data": {
       "text/plain": [
        "{'name': 'MFS_questions_v01',\n",
-       " 'id': 1,\n",
+       " 'id': 3,\n",
        " 'has_query': True,\n",
        " 'has_output': False,\n",
        " 'has_output_true': True,\n",
        " 'size': 39}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 107,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -629,6 +629,12 @@
        "      <td>[output, query]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>generation_time</td>\n",
+       "      <td>The time to generate the answer/output</td>\n",
+       "      <td>llm</td>\n",
+       "      <td>[query]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>judge_completude</td>\n",
        "      <td>[0-100] score of the completude correspondance between output and output_true</td>\n",
        "      <td>llm</td>\n",
@@ -636,7 +642,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>judge_exactness</td>\n",
-       "      <td>Binary correspondance between output and output_true</td>\n",
+       "      <td>Binary similarity between output and output_true</td>\n",
        "      <td>llm</td>\n",
        "      <td>[output, output_true, query]</td>\n",
        "    </tr>\n",
@@ -665,7 +671,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 108,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -700,10 +706,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (93), status: running_answers\n",
-      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (94), status: running_answers\n",
-      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (95), status: running_answers\n",
-      "Created experiment: MFS_questions_mfs-rag-baseline_3_v0 (96), status: running_answers\n"
+      "Created experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (30), status: running_answers\n",
+      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (31), status: running_answers\n",
+      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (32), status: running_answers\n",
+      "Created experiment: MFS_questions_mfs-rag-baseline_3_v0 (33), status: running_answers\n"
      ]
     }
    ],
@@ -752,14 +758,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add a metric to an existing experiment(s)\n",
+    "# Add or recompute a metric to an existing experiment(s)\n",
     "# - If you want to update one or many metriccs without relaucnhing the answer generation\n",
-    "# --\n",
-    "return\n",
+    "# -> In this exemple we add the generatime_metric to list of computed metric (generation time is kept in memory at inference time)\n",
     "for exp_id in experiment_ids:\n",
     "    experiment = {\n",
-    "    #\"metrics\": [\"answer_relevancy\"],\n",
-    "    \"metrics\": [\"output_length\", \"judge_exactness\", \"judge_completude\", \"judge_notator\", \"bias\", \"toxicity\", \"answer_relevancy\"],\n",
+    "    \"metrics\": [\"generation_time\"],\n",
     "    \"skip_answers_generation\": True,\n",
     "    }\n",
     "    response = requests.patch(f'{API_URL}/v1/experiment/{exp_id}', json=experiment)\n",
@@ -893,21 +897,18 @@
    "source": [
     "# Read results\n",
     "# --\n",
-    "df_all = [] # list of \n",
-    "supports = [] # if some answer/observation failed, the support can be less than the dataset size\n",
-    "# @TODO: make it simple !\n",
+    "df_all = [] # list of results per experiment/model\n",
+    "supports = [] # Store the support for debugging: if some answer/observation failed, the support can be less than the dataset size\n",
     "for model, exp_id in zip(models_to_test, experiment_ids):\n",
     "    # Get an experiment result\n",
     "    response = requests.get(f'{API_URL}/v1/experiment/{exp_id}?with_results=true')\n",
     "    experiment = response.json()\n",
+    "    # experiment[\"name\"] # Name of the experiment\n",
     "    if experiment[\"experiment_status\"] != \"finished\":\n",
     "        print(f\"Warning: experiment {exp_id} is not finished yet...\")\n",
-    "    # experiment[\"name\"] # Name of the experiment\n",
     "    results = experiment[\"results\"]\n",
     "    \n",
-    "    # Build a result dataframe\n",
-    "    # --\n",
-    "    # build frontend measure from the observation_table (mean stc etc)\n",
+    "    # Build a result dataframe  from the observation_table (mean, std etc)\n",
     "    df_metrics = {}\n",
     "    metric_support = []\n",
     "    supports.append(metric_support)\n",
@@ -925,14 +926,13 @@
     "        metric_support.append(len(arr))\n",
     "    \n",
     "    # Stack the mean_std final measure\n",
-    "    # --\n",
-    "    # Create a DataFrame for mean±std\n",
     "    name = model[\"_name\"] if model.get(\"_name\") else model[\"name\"]\n",
     "    df = pd.DataFrame({metric_name:df[\"mean_std\"].iloc[0] for metric_name, df in sorted(df_metrics.items())}, index=[name])\n",
     "    df_all.append(df)\n",
     "\n",
     "final_df = pd.concat(df_all)\n",
     "#final_df[\"support\"] = supports # for debugging\n",
+    "#final_df[\"generation_time\"] = generation_time\n",
     "final_df"
    ]
   },
