fix: better error handler for error require metric inout missing + Baseline Demo notebook.

--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -753,10 +753,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "f40ad66f-2920-47d2-9cac-1edc51c863b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (30), status: running_metrics\n",
+      "Updated experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (31), status: running_metrics\n",
+      "Updated experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (32), status: running_metrics\n",
+      "Updated experiment: MFS_questions_mfs-rag-baseline_3_v0 (33), status: running_metrics\n"
+     ]
+    }
+   ],
    "source": [
     "# Add or recompute a metric to an existing experiment(s)\n",
     "# - If you want to update one or many metriccs without relaucnhing the answer generation\n",
@@ -784,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 128,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
@@ -810,53 +821,58 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>answer_relevancy</th>\n",
-       "      <th>bias</th>\n",
        "      <th>judge_completude</th>\n",
        "      <th>judge_exactness</th>\n",
        "      <th>judge_notator</th>\n",
        "      <th>output_length</th>\n",
+       "      <th>generation_time</th>\n",
        "      <th>toxicity</th>\n",
+       "      <th>bias</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>AgentPublic/llama3-instruct-8b</th>\n",
-       "      <td>0.86 ± 0.24</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
-       "      <td>29.62 ± 21.44</td>\n",
+       "      <td>0.90 ± 0.23</td>\n",
+       "      <td>26.41 ± 22.27</td>\n",
        "      <td>0.03 ± 0.16</td>\n",
-       "      <td>3.69 ± 1.99</td>\n",
-       "      <td>308.44 ± 97.30</td>\n",
+       "      <td>3.41 ± 1.97</td>\n",
+       "      <td>308.33 ± 93.23</td>\n",
+       "      <td>6.64 ± 1.99</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
-       "      <td>0.94 ± 0.11</td>\n",
+       "      <td>0.95 ± 0.15</td>\n",
+       "      <td>30.00 ± 20.16</td>\n",
+       "      <td>0.05 ± 0.22</td>\n",
+       "      <td>3.97 ± 2.27</td>\n",
+       "      <td>296.13 ± 113.57</td>\n",
+       "      <td>3.82 ± 1.43</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>29.49 ± 19.21</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
-       "      <td>3.51 ± 2.01</td>\n",
-       "      <td>303.51 ± 107.09</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>meta-llama/Meta-Llama-3.1-70B-Instruct</th>\n",
-       "      <td>0.92 ± 0.21</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
-       "      <td>35.51 ± 23.14</td>\n",
+       "      <td>0.92 ± 0.22</td>\n",
+       "      <td>35.00 ± 24.73</td>\n",
        "      <td>0.05 ± 0.22</td>\n",
-       "      <td>4.72 ± 2.53</td>\n",
-       "      <td>254.03 ± 104.30</td>\n",
+       "      <td>4.85 ± 2.63</td>\n",
+       "      <td>261.89 ± 109.02</td>\n",
+       "      <td>9.42 ± 4.01</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mfs-rag-baseline</th>\n",
-       "      <td>0.88 ± 0.18</td>\n",
+       "      <td>0.90 ± 0.18</td>\n",
+       "      <td>42.05 ± 26.91</td>\n",
+       "      <td>0.21 ± 0.40</td>\n",
+       "      <td>5.36 ± 2.59</td>\n",
+       "      <td>119.41 ± 66.23</td>\n",
+       "      <td>4.31 ± 1.80</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>43.92 ± 28.44</td>\n",
-       "      <td>0.18 ± 0.38</td>\n",
-       "      <td>5.51 ± 2.60</td>\n",
-       "      <td>117.18 ± 59.10</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -864,32 +880,32 @@
        "</div>"
       ],
       "text/plain": [
-       "                                       answer_relevancy         bias  \\\n",
-       "AgentPublic/llama3-instruct-8b              0.86 ± 0.24  0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.94 ± 0.11  0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.92 ± 0.21  0.00 ± 0.00   \n",
-       "mfs-rag-baseline                            0.88 ± 0.18  0.00 ± 0.00   \n",
+       "                                       answer_relevancy judge_completude  \\\n",
+       "AgentPublic/llama3-instruct-8b              0.90 ± 0.23    26.41 ± 22.27   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.95 ± 0.15    30.00 ± 20.16   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.92 ± 0.22    35.00 ± 24.73   \n",
+       "mfs-rag-baseline                            0.90 ± 0.18    42.05 ± 26.91   \n",
        "\n",
-       "                                       judge_completude judge_exactness  \\\n",
-       "AgentPublic/llama3-instruct-8b            29.62 ± 21.44     0.03 ± 0.16   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct     29.49 ± 19.21     0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct    35.51 ± 23.14     0.05 ± 0.22   \n",
-       "mfs-rag-baseline                          43.92 ± 28.44     0.18 ± 0.38   \n",
+       "                                       judge_exactness judge_notator  \\\n",
+       "AgentPublic/llama3-instruct-8b             0.03 ± 0.16   3.41 ± 1.97   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct      0.05 ± 0.22   3.97 ± 2.27   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct     0.05 ± 0.22   4.85 ± 2.63   \n",
+       "mfs-rag-baseline                           0.21 ± 0.40   5.36 ± 2.59   \n",
        "\n",
-       "                                       judge_notator    output_length  \\\n",
-       "AgentPublic/llama3-instruct-8b           3.69 ± 1.99   308.44 ± 97.30   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct    3.51 ± 2.01  303.51 ± 107.09   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct   4.72 ± 2.53  254.03 ± 104.30   \n",
-       "mfs-rag-baseline                         5.51 ± 2.60   117.18 ± 59.10   \n",
+       "                                          output_length generation_time  \\\n",
+       "AgentPublic/llama3-instruct-8b           308.33 ± 93.23     6.64 ± 1.99   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct   296.13 ± 113.57     3.82 ± 1.43   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct  261.89 ± 109.02     9.42 ± 4.01   \n",
+       "mfs-rag-baseline                         119.41 ± 66.23     4.31 ± 1.80   \n",
        "\n",
-       "                                           toxicity  \n",
-       "AgentPublic/llama3-instruct-8b          0.00 ± 0.00  \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct   0.00 ± 0.00  \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct  0.00 ± 0.00  \n",
-       "mfs-rag-baseline                        0.00 ± 0.00  "
+       "                                           toxicity         bias  \n",
+       "AgentPublic/llama3-instruct-8b          0.00 ± 0.00  0.00 ± 0.00  \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct   0.00 ± 0.00  0.00 ± 0.00  \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct  0.00 ± 0.00  0.00 ± 0.00  \n",
+       "mfs-rag-baseline                        0.00 ± 0.00  0.00 ± 0.00  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +930,7 @@
     "    supports.append(metric_support)\n",
     "    for metric_results in results: \n",
     "        metric_name = metric_results[\"metric_name\"]\n",
-    "        arr = np.array([x[\"score\"] for x in metric_results[\"observation_table\"] if (isinstance(x[\"score\"], (int, float)))])\n",
+    "        arr = np.array([x[\"score\"] for x in metric_results[\"observation_table\"] if pd.notna(x[\"score\"])])\n",
     "        df = pd.DataFrame([[\n",
     "                np.mean(arr), # mean\n",
     "                np.std(arr), # std\n",
@@ -932,7 +948,8 @@
     "\n",
     "final_df = pd.concat(df_all)\n",
     "#final_df[\"support\"] = supports # for debugging\n",
-    "#final_df[\"generation_time\"] = generation_time\n",
+    "# Reorder columns\n",
+    "final_df = final_df[['answer_relevancy', 'judge_completude', 'judge_exactness', 'judge_notator', 'output_length', 'generation_time', 'toxicity', 'bias']]\n",
     "final_df"
    ]
   },
@@ -946,23 +963,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 125,
    "id": "6c3b601d-8340-49cc-aec5-fff803fb946c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 7087,\n",
-       " 'created_at': '2024-11-09T01:37:35.215941',\n",
+       "{'id': 1276,\n",
+       " 'created_at': '2024-11-09T12:57:32.560445',\n",
        " 'score': 1.0,\n",
-       " 'observation': 'The score is 1.00 because the response perfectly addressed the question without any irrelevant information. Well done!',\n",
-       " 'num_line': 10,\n",
+       " 'observation': 'The score is 1.00 because the response perfectly addresses the question without any irrelevant information. Great job!',\n",
+       " 'num_line': 21,\n",
        " 'error_msg': None,\n",
-       " 'execution_time': 5}"
+       " 'execution_time': 4}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +987,7 @@
    "source": [
     "# See what's inside an experiment result\n",
     "# --\n",
-    "metric_index = 4\n",
+    "metric_index = 2\n",
     "len(results) # number of metrics\n",
     "list(results[metric_index]) # the keys of the dict representing the result object\n",
     "len(results[metric_index][\"observation_table\"]) # number of observation -> one per dataset line.\n",
