--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -36,7 +36,7 @@
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "MFS_API_URL = \"https://franceservices.staging.etalab.gouv.fr/api/v1\"\n",
-    "MFS_API_KEY = \"fee84132-e662-42d0-b198-cfda9de95c51\""
+    "MFS_API_KEY = os.getenv(\"MFS_API_KEY\")"
    ]
   },
   {
@@ -689,7 +689,9 @@
   {
    "cell_type": "markdown",
    "id": "d9ffe4f9-9dda-429d-a8ea-1b783abfc505",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Lauching a couple of experiments\n",
     "\n",
