--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 130,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>output_length</td>\n",
-       "      <td>Binary correspondance between output and output_true</td>\n",
+       "      <td>Number of words of the output</td>\n",
        "      <td>llm</td>\n",
        "      <td>[output]</td>\n",
        "    </tr>\n",
@@ -305,7 +305,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
