feat: Experiment set with cv param + demo notebook

--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -7,13 +7,15 @@
    "source": [
     "# Demo for launching a simple experiment in EG1\n",
     "\n",
+    "*Objectif*: **Comparing some baseline models on a few metrics**\n",
+    "\n",
     "- code: https://github.com/etalab-ia/eg1\n",
     "- api documentation: https://eg1.etalab.gouv.fr/redoc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 132,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 133,
    "id": "f466a3ee-9b1a-4115-8d71-94297d3ced2e",
    "metadata": {},
    "outputs": [
@@ -156,13 +158,12 @@
        "4  CNI/passeport  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "mfs_dataset = pd.read_csv(\"_data/evaluation_set_qo_qcm.csv\", delimiter=\";\")\n",
     "mfs_dataset.rename(columns={'true_answer': 'output_true'}, inplace=True) # to be compliant with EG1\n",
     "mfs_dataset.head()"
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 134,
    "id": "450399aa-f836-47b7-b6f6-2541da8a9f27",
    "metadata": {},
    "outputs": [
@@ -188,14 +189,14 @@
      "data": {
       "text/plain": [
        "{'name': 'MFS_questions_v01',\n",
-       " 'id': 3,\n",
+       " 'id': 1,\n",
        " 'has_query': True,\n",
        " 'has_output': False,\n",
        " 'has_output_true': True,\n",
        " 'size': 39}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 135,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -263,12 +264,6 @@
        "      <td>[output, query]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>generation_time</td>\n",
-       "      <td>The time to generate the answer/output</td>\n",
-       "      <td>llm</td>\n",
-       "      <td>[query]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>judge_completude</td>\n",
        "      <td>[0-100] score of the completude correspondance between output and output_true</td>\n",
        "      <td>llm</td>\n",
@@ -298,6 +293,24 @@
        "      <td>llm</td>\n",
        "      <td>[output, output_true]</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>generation_time</td>\n",
+       "      <td>The time to generate the answer/output</td>\n",
+       "      <td>ops</td>\n",
+       "      <td>[query]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>nb_tokens_completion</td>\n",
+       "      <td>Number of tokens in the completion</td>\n",
+       "      <td>ops</td>\n",
+       "      <td>[query]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>nb_tokens_prompt</td>\n",
+       "      <td>Number of tokens in the prompt</td>\n",
+       "      <td>ops</td>\n",
+       "      <td>[query]</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>"
       ],
@@ -305,7 +318,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 137,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -340,10 +353,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (30), status: running_answers\n",
-      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (31), status: running_answers\n",
-      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (32), status: running_answers\n",
-      "Created experiment: MFS_questions_mfs-rag-baseline_3_v0 (33), status: running_answers\n"
+      "Created experiment: MFS_questions>AgentPublic/llama3-instruct-8b_0_v0 (5), status: running_answers\n",
+      "Created experiment: MFS_questions>meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (6), status: running_answers\n",
+      "Created experiment: MFS_questions>meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (7), status: running_answers\n",
+      "Created experiment: MFS_questions>mfs-rag-baseline_3_v0 (8), status: running_answers\n"
      ]
     }
    ],
@@ -373,7 +386,7 @@
     "    name = model[\"_name\"] if model.get(\"_name\") else model[\"name\"]\n",
     "    model[\"sampling_params\"] = sampling_params\n",
     "    experiment = {\n",
-    "        \"name\" : f\"MFS_questions_{name}_{i}_v0\", \n",
+    "        \"name\" : f\"MFS_questions>{name}_{i}_v0\", \n",
     "        \"dataset\": dataset,\n",
     "        \"model\": model,\n",
     "        \"metrics\": metrics,\n",
@@ -389,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 141,
    "id": "f40ad66f-2920-47d2-9cac-1edc51c863b5",
    "metadata": {},
    "outputs": [
@@ -397,10 +410,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (30), status: running_metrics\n",
-      "Updated experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (31), status: running_metrics\n",
-      "Updated experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (32), status: running_metrics\n",
-      "Updated experiment: MFS_questions_mfs-rag-baseline_3_v0 (33), status: running_metrics\n"
+      "Updated experiment: MFS_questions>AgentPublic/llama3-instruct-8b_0_v0 (5), status: finished\n",
+      "Updated experiment: MFS_questions>meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (6), status: finished\n",
+      "Updated experiment: MFS_questions>meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (7), status: finished\n",
+      "Updated experiment: MFS_questions>mfs-rag-baseline_3_v0 (8), status: finished\n"
      ]
     }
    ],
